--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ruoyi",
   "version": "3.4.0",
-  "description": "建德人才人事后端管理系统",
+  "description": "若依后端管理系统",
   "author": "若依",
   "license": "MIT",
   "scripts": {
